kube/lookie/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: default
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  type: ClusterIP
  clusterIP: 10.43.250.122
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - name: http
      port: 9696
      protocol: TCP
      targetPort: 9696
